--- a/index.html
+++ b/index.html
@@ -9,6 +9,30 @@
 
 </head>
 <body>
-    CONTENTS
+    <main>
+        <header>
+            <img src="./img/Logo.png" alt="Logotimas">
+            <nav>
+                <a href="#" style="text-decoration-line: underline;text-decoration-color:orangered; text-decoration-thickness: 25%;">Home</a>
+                <a href="#">Instructors</a>
+                <a href="#">Schedule</a>
+                <a href="#">About studio</a>
+                <a href="#">Blog</a>
+                <a href="#">Contacts</a>
+
+            </nav>
+        </header>
+        <section>
+            <div>
+                <h1>Welcome to Yoga <span style="color: #FF4622;">Lifestyle</span> studio!</h1>
+    
+                <p>We are trying very hard to create all the conditions so  your stay in the studio is comfortable and favorable for development creativity and creation.</p>
+                <a href="#">Sing up for classes</a>
+            </div>
+            <img src="./img/Megina-joga.png" alt="Mergaite joga">
+
+
+        </section>
+    </main>
 </body>
 </html>
