--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <link rel="favicon.ico" href="./img/Favicon.ico.png">
     <link rel="stylesheet" href="./CSS/main.css"
 
 </head>
