--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    <link rel="favicon.ico" href="./img/Favicon.ico.png">
+    <link rel="favicon.ico" href="./img/Favicon.ico.png" type="image/x=icon">
     <link rel="stylesheet" href="./CSS/main.css"
 
 </head>
@@ -33,7 +33,6 @@
         <section>
             <div>
                 <h1>Welcome to Yoga <span style="color: #FF4622;">Lifestyle</span> studio!</h1>
-    
                 <p>We are trying very hard to create all the conditions so  your stay in the studio is comfortable and favorable for development creativity and creation.</p>
                 <a href="#">Sing up for classes</a>
             </div>
